[tool.poetry]
name = "factored-ppo-handson"
version = "0.1.0"
description = ""
authors = ["Daniel Ávila Vera <davera.017@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
mujoco = "2.3.7"
torch = "^2.1.0"
numpy = "^1.26.1"
tqdm = "^4.66.1"
gymnasium = {extras = ["mujoco"], version = "^0.29.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
